#58: [WIP] Add integrity on API
