# back/src/main/java/com/ynov/capuches/opale/controllers/AdventurerController.java
@@ -2,7 +2,7 @@ package com.ynov.capuches.opale.controllers;
 
 
 import com.ynov.capuches.opale.model.AdventurerCreationDTO;
-import com.ynov.capuches.opale.model.AdventurerDTO;
+import com.ynov.capuches.opale.model.AdventurerResponseDTO;
 import com.ynov.capuches.opale.openapi.api.AdventurerApiDelegate;
 import com.ynov.capuches.opale.services.AdventurerService;
 import org.springframework.http.HttpStatus;
@@ -20,13 +20,13 @@ public class AdventurerController implements AdventurerApiDelegate {
     }
 
     @Override
-    public ResponseEntity<AdventurerDTO> createAdventurer(AdventurerCreationDTO adventurerCreationDTO) {
+    public ResponseEntity<AdventurerResponseDTO> createAdventurer(AdventurerCreationDTO adventurerCreationDTO) {
         return ResponseEntity.status(HttpStatus.CREATED).body(adventurerService.createAdventurer(adventurerCreationDTO));
     }
 
     @Override
-    public ResponseEntity<AdventurerDTO> getAdventurerById(Long id) {
-        AdventurerDTO adventurerDTO = adventurerService.getOneAdventurer(id);
+    public ResponseEntity<AdventurerResponseDTO> getAdventurerById(Long id) {
+        AdventurerResponseDTO adventurerDTO = adventurerService.getOneAdventurer(id);
         if (adventurerDTO != null) {
             return ResponseEntity.status(HttpStatus.OK).body(adventurerDTO);
         }
@@ -34,7 +34,7 @@ public class AdventurerController implements AdventurerApiDelegate {
     }
 
     @Override
-    public ResponseEntity<List<AdventurerDTO>> getAdventurers() {
+    public ResponseEntity<List<AdventurerResponseDTO>> getAdventurers() {
         return new ResponseEntity<>(adventurerService.getAllAdventurers(), HttpStatus.OK);
     }
 
